@@ -1,3 +1,8 @@
+2006-05-17  Kees Cook  <kees@outflux.net>
+	* src/dialogs/rdf.cpp: corrected localization on array, added comments.
+	* src/ui/widget/licensor.cpp: Localized the license name.
+	* configure.ac: added comment about why sigc++ was upgraded
+
 2006-05-17  Jon A. Cruz  <jon@joncruz.org>
 	* src/dialogs/layers-panel.cpp:
 	  Flipped top/bottom in layers UI to reflect visible stacking.
